trunk/Archive2/f4/b615776f8cac36/output
In file included from /usr/include/c++/4.8/mutex:35:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
main.cpp:9:5: error: 'mutex' in namespace 'std' does not name a type
     std::mutex m;
     ^
main.cpp: In constructor 'Box::Box(int)':
main.cpp:6:29: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     explicit Box(int num) : num_things{num} {}
                             ^
main.cpp: In function 'void transfer(Box&, Box&, int)':
main.cpp:15:5: error: 'unique_lock' is not a member of 'std'
     std::unique_lock<std::mutex> lock1(from.m, std::defer_lock);
     ^
main.cpp:15:22: error: 'mutex' is not a member of 'std'
     std::unique_lock<std::mutex> lock1(from.m, std::defer_lock);
                      ^
main.cpp:15:45: error: 'struct Box' has no member named 'm'
     std::unique_lock<std::mutex> lock1(from.m, std::defer_lock);
                                             ^
main.cpp:15:48: error: 'defer_lock' is not a member of 'std'
     std::unique_lock<std::mutex> lock1(from.m, std::defer_lock);
                                                ^
main.cpp:15:63: error: 'lock1' was not declared in this scope
     std::unique_lock<std::mutex> lock1(from.m, std::defer_lock);
                                                               ^
main.cpp:16:5: error: 'unique_lock' is not a member of 'std'
     std::unique_lock<std::mutex> lock2(to.m, std::defer_lock);
     ^
main.cpp:16:22: error: 'mutex' is not a member of 'std'
     std::unique_lock<std::mutex> lock2(to.m, std::defer_lock);
                      ^
main.cpp:16:43: error: 'struct Box' has no member named 'm'
     std::unique_lock<std::mutex> lock2(to.m, std::defer_lock);
                                           ^
main.cpp:16:46: error: 'defer_lock' is not a member of 'std'
     std::unique_lock<std::mutex> lock2(to.m, std::defer_lock);
                                              ^
main.cpp:16:61: error: 'lock2' was not declared in this scope
     std::unique_lock<std::mutex> lock2(to.m, std::defer_lock);
                                                             ^
main.cpp:19:5: error: 'lock' is not a member of 'std'
     std::lock(lock1, lock2);
     ^
main.cpp: In function 'int main()':
main.cpp:32:5: error: 'thread' is not a member of 'std'
     std::thread t1(transfer, std::ref(acc1), std::ref(acc2), 10);
     ^
main.cpp:32:17: error: expected ';' before 't1'
     std::thread t1(transfer, std::ref(acc1), std::ref(acc2), 10);
                 ^
main.cpp:33:5: error: 'thread' is not a member of 'std'
     std::thread t2(transfer, std::ref(acc2), std::ref(acc1), 5);
     ^
main.cpp:33:17: error: expected ';' before 't2'
     std::thread t2(transfer, std::ref(acc2), std::ref(acc1), 5);
                 ^
main.cpp:35:5: error: 't1' was not declared in this scope
     t1.join();
     ^
main.cpp:36:5: error: 't2' was not declared in this scope
     t2.join();
     ^
